refactor: address PR review feedback
- Extract runAsModule to isRunAsModule() method instead of local variable
- Add JarFile and JarEntry imports, remove full class names
- Improves code readability and follows project conventions

Based on review comments from @maxandersen on PR #2440